[package]
name = "poisson"
version = "0.8.0"
authors = ["WaDelma <>"]
description = "Poisson-disk distribution generator."
repository = "https://github.com/WaDelma/poisson"
documentation = "https://WaDelma.github.io/poisson/"
readme = "README.md"
keywords = [ "distribution", "poisson-disk", "multidimensional", "sampling" ]
license = "MIT"

[dependencies]
rand = "0.3"
alga = "0.5"
num-traits = "0.1"
lazy_static = "0.1"
modulo = "0.1"
sphere = "0.2"

[dev-dependencies]
nalgebra = "0.11"

[profile.test]
opt-level = 3
