[package]
name = "poisson"
version = "0.9.0"
authors = ["WaDelma <>"]
description = "Poisson-disk distribution generator."
repository = "https://github.com/WaDelma/poisson"
documentation = "https://WaDelma.github.io/poisson/"
readme = "README.md"
keywords = [ "distribution", "poisson-disk", "multidimensional", "sampling" ]
license = "MIT"

[dependencies]
rand = "0.5"
alga = "0.7"
num-traits = "0.2"
lazy_static = "0.1"
modulo = "0.1"
sphere = "0.3"

[dev-dependencies]
nalgebra = "0.16"

[profile.test]
opt-level = 3
