[package]
name = "poisson"
version = "0.10.1"
authors = ["WaDelma <>"]
description = "Poisson-disk distribution generator."
repository = "https://github.com/WaDelma/poisson"
readme = "../README.md"
category = [ "algorithms" ]
keywords = [ "distribution", "poisson-disk", "multidimensional", "sampling" ]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "WaDelma/poisson" }
coveralls = { repository = "WaDelma/poisson", service = "github" }

[dependencies]
rand = "0.6"
alga = "0.8"
num-traits = "0.2"
lazy_static = "1.3"
modulo = "0.1"
sphere = "0.3"

[dev-dependencies]
nalgebra = "0.17"
